fix: dnd info box no overflow

--- a/src/style/style.module.css
+++ b/src/style/style.module.css
@@ -7,7 +7,7 @@
 .monsterdb_info {
   position: absolute;
   z-index: 3;
-  width: 175px;
+  width: 200px;
   opacity: 1;
 }
 
